[metadata]
name = WPCL
version = 1.0.0
author = Zack Didcott
summary = Userspace program to get a USB Wireless PC Lock working on GNU/Linux

[options]
packages =
  WPCL
include_package_data = true
python_requires = >= 3.6
install_requires =
  evdev
  psutil
  PyGObject

[options.entry_points]
console_scripts =
  WPCL = WPCL.__main__:main
